fixed contact deskto spacing

--- a/css/contact.css
+++ b/css/contact.css
@@ -36,7 +36,7 @@ body.dark-mode {
     left: 0;
     height: 100%;
     width: 100%;
-    z-index: 20;
+    z-index: 1;
     opacity: .7;
 }
 
@@ -86,7 +86,7 @@ body.dark-mode {
     display: block;
     position: absolute;
     bottom: -2px;
-    z-index: 100;
+    z-index: 10000;
 }
 
 /*-- -------------------------- -->
@@ -364,7 +364,7 @@ form p{
     <--- -------------------------- -*/
 
     #hero {
-        height: 900px;
+        height: 1100px;
         background-attachment: fixed;
         position: relative;
     }
